// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PeriodicInventoryTooltip /> should render correctly 1`] = `
<ChartTooltip
  bodyComponent={
    <React.Fragment>
      <ForwardRef>
        Inventory
      </ForwardRef>
      <ForwardRef>
        100
      </ForwardRef>
    </React.Fragment>
  }
  headerComponent={
    <ForwardRef>
      2018-06-18T15:47:45.706Z @MMM DD, YYYY
    </ForwardRef>
  }
/>
`;

exports[`<PeriodicInventoryTooltip /> should render correctly when active is false 1`] = `""`;

exports[`<PeriodicInventoryTooltip /> should render correctly when no payload is passed 1`] = `""`;

exports[`<PeriodicInventoryTooltip /> should render correctly with different dateformats  1`] = `
<ChartTooltip
  bodyComponent={
    <React.Fragment>
      <ForwardRef>
        Inventory
      </ForwardRef>
      <ForwardRef>
        100
      </ForwardRef>
    </React.Fragment>
  }
  headerComponent={
    <React.Fragment>
      <ForwardRef>
        2018-06-18T15:47:45.706Z @MMM DD, YYYY
      </ForwardRef>
      <ForwardRef>
        2018-06-18T15:47:45.706Z @hh:mm a
      </ForwardRef>
    </React.Fragment>
  }
/>
`;
